[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Pointer.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=5]
radius = 1.0

[sub_resource type="CircleShape2D" id=6]
radius = 1.0

[node name="Pointer" type="Node2D"]
script = ExtResource( 1 )

[node name="TooClose" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TooClose"]
shape = SubResource( 5 )

[node name="Plants" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plants"]
shape = SubResource( 6 )

[node name="NearPlayer" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="NearPlayer"]
shape = SubResource( 6 )

[node name="InField" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InField"]
shape = SubResource( 6 )

[connection signal="area_entered" from="TooClose" to="." method="update_hovered"]
[connection signal="area_exited" from="TooClose" to="." method="update_hovered"]
[connection signal="area_entered" from="Plants" to="." method="update_hovered"]
[connection signal="area_exited" from="Plants" to="." method="update_hovered"]
[connection signal="area_entered" from="NearPlayer" to="." method="update_hovered"]
[connection signal="area_exited" from="NearPlayer" to="." method="update_hovered"]
[connection signal="area_entered" from="InField" to="." method="update_hovered"]
[connection signal="area_exited" from="InField" to="." method="update_hovered"]
